<resources>
    <string name="app_name">SE1T1_MACRes</string>

    <string name="roles_prompt">Choose your role</string>

    <string name="state_prompt">Choose your state</string>

    <string name="facilityTypes_prompt">Choose Facility Type</string>

    <string name="facilityDuration_prompt">Choose Duration</string>

    <string name="facilityTimeInterval_prompt">Choose Time Interval</string>

    <string name="facilityVenue_prompt">Choose Venue</string>

    <string name="facilityDeposit_prompt">Choose Deposit</string>

    <string-array name="roles_arrays">
        <item>USER</item>
        <item>FACILITY MANAGER</item>
        <item>ADMIN</item>
    </string-array>

    <string-array name="state_arrays">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Iowa</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>Washington DC</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string-array name="facilityType_array">
        <item>Multipurpose Room</item>
        <item>Indoor Basketball Court</item>
        <item>Indoor Volleyball Court</item>
        <item>Indoor Soccer Gymnasium</item>
        <item>Racquetball Court</item>
        <item>Badmintion Court</item>
        <item>Table Tennis</item>
        <item>Conference Room</item>
        <item>Outdoor Volleyball Court</item>
        <item>Outdoor Basketball Court</item>
    </string-array>

    <string-array name="facilityDuration_array">
        <item>Same Day</item>
        <item>7 Days</item>
    </string-array>

    <string-array name="facilityTimeInterval_array">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
    </string-array>

    <string-array name="facilityVenue_array">
        <item>Indoor</item>
        <item>Outdoor</item>
    </string-array>

    <string-array name="facilityDeposit_array">
        <item>$25</item>
        <item>$50</item>
        <item>$75</item>
        <item>$100</item>
    </string-array>
</resources>
